# template-java-simple-server

server/: BUILD.bazel
