load("@genrules//google_cloud_run:index.bzl", "deploy")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "server",
    srcs = ["Server.java"],
    main_class = "Server",
)

deploy(
    name="java_service",
    binary=":server_deploy.jar",
    base_image="gcr.io/distroless/java",
)
